Fix card gap issue and Update styles

--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@
     list-style-type: none;
 }
 
+:root {
+    --blue: #19a0df;
+    --gray: #dddddd;
+    --yellow: #eecb05;
+    --white: #f5f5f5;
+    --dark-gray: #4b4b4b;
+}
+
 body {
     display: flex;
     height: 100vh;
@@ -14,22 +22,25 @@ body {
 
 li, button, h2 {
     cursor: pointer;
+    background: none;
+    border: none;
 }
 
 .container {
     flex: 1;
     display: grid;
-    grid-template-columns: max-content 1fr;
+    grid-template-columns: 305px 1fr;
     grid-template-rows: min-content min-content auto;
 }
 
 .sidebar {
     grid-row: 1/-1;
-    background-color: hsl(120, 1%, 27%);
-    color: white;
+    background-color: var(--blue);
+    color: var(--white);
     font-weight: 700;
     padding: 1em;
     z-index: 2;
+    box-shadow: 8px 0px 10px rgba(0, 0, 0, 0.2)
 }
 
 .sidebar .logo {
@@ -39,13 +50,17 @@ li, button, h2 {
 }
 
 .sidebar ul {
-    margin: 3em 3em 0 1em;
+    margin: 3em 2em 3em 1em;
 }
 
 .sidebar li {
     margin: 0.75em 0;
     font-size: 1.2rem;
     font-weight: 500;
+}
+
+.sidebar li:hover {
+    transform: translateX(10px);
 }
 
 .sidebar i {
@@ -59,7 +74,7 @@ li, button, h2 {
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
-    background-color: whitesmoke;
+    background-color: var(--white);
 }
 
 .header li {
@@ -72,13 +87,11 @@ li, button, h2 {
     align-items: center;
 }
 
-button {
-    border: none;
-}
-
 button:hover,
-input {
-    opacity: 0.75;
+input:hover,
+li:hover,
+.announcements h2:hover {
+    opacity: 0.85;
 }
 
 button.search {
@@ -91,11 +104,11 @@ button.search {
 .search-bar input {
     border: 1px solid hsl(0, 0%, 75%);
     border-radius: 20px;
-    background-color: hsl(0, 0%, 86%);
+    background-color: var(--gray);
     height: 1.7rem;
     width: 90%;
-    margin: 0 1rem;
-    box-shadow: inset 2px 2px 8px rgba(0, 0, 0, 0.1);
+    margin: 0 0.5rem;
+    box-shadow: inset 2px 2px 2px rgba(0, 0, 0, 0.1);
     padding: 0 1rem;
 }
 
@@ -120,12 +133,15 @@ button.notification {
     width: 70px;
     height: 70px;
     border-radius: 50%;
-    border: 2px solid hsl(0, 0%, 10%);
     margin: 0.3rem 0;
     background-repeat:no-repeat;
     background-position: center;
     background-size:contain;
     box-shadow: 2px 2px 10px hsl(0, 0%, 40%);
+}
+
+.thumb:hover {
+    outline: var(--yellow) solid 2px;
 }
 
 .header .thumb {
@@ -144,9 +160,9 @@ button.notification {
     display: flex;
     align-items: center;
     gap: 1.5rem;
-    box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.2),
-                0px -1px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.2);
     z-index: 1;
+    background-color: var(--white);
 }
 
 .nav .thumb,
@@ -173,13 +189,16 @@ button.notification {
 .nav button {
     font-size: 1rem;
     padding: 0.5rem 1.5rem;
-    border: 1px solid lightgray;
     border-radius: 25px;
     margin: 0 0.5rem;
     font-weight: 600;
-    color: whitesmoke;
-    background-color: black;
+    color: var(--white);
+    background-color: var(--blue);
     cursor: pointer;
+}
+
+.nav button:hover {
+    outline: var(--yellow) solid 2px;
 }
 
 .actions {
@@ -190,15 +209,16 @@ button.notification {
 main {
     display: flex;
     flex-wrap: wrap;
-    background-color: gray;
+    background-color: var(--gray);
     padding: 1rem;
+    box-shadow: inser 10px 0px 10px rgba(0, 0, 0, 0.2)
 }
 
 .projects {
     flex: 1;
     display: grid;
-    gap: 1rem;
-    padding: 1rem;
+    margin: 1rem;
+    gap: 1.5rem;
     grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
     grid-template-rows: min-content 350px;
     grid-auto-rows: 350px;
@@ -214,7 +234,9 @@ main {
 }
 
 .card p {
-    margin: 1rem 0 3rem 0;
+    overflow: hidden;
+    max-height: 9.6em;
+    line-height: 1.2em;
 }
 
 .card .title, .announcements>div:nth-child(2) h2 {
@@ -227,20 +249,26 @@ main {
     background-color: whitesmoke;
     border: 1px solid lightgrey;
     border-radius: 15px;
-    box-shadow: 2px 3px 2px 2px black;
+    box-shadow: 2px 3px 2px 2px hsl(0, 0%, 70%);
 }
 
 .card {
-    min-width: 300px;
-    position: relative;
+    display: flex;
+    flex-direction: column;
     padding-left: 2rem;
-    box-shadow: 2px 3px 2px 2px black, inset 10px 0px 0px lightgray;
+    box-shadow: 2px 3px 2px 2px hsl(0, 0%, 70%), inset 10px 0px 0px var(--yellow);
+    overflow: hidden;
+}
+
+.card:hover {
+    margin: 5px;
+    box-shadow: 2px 3px 2px 2px hsl(0, 0%, 70%), inset 10px 0px 0px var(--yellow);
+
 }
 
 .card-buttons {
-    position: absolute;
-    bottom: 1rem;
-    right: 1em;
+    margin-top: auto;
+    align-self: self-end;
 }
 
 .card-buttons button {
@@ -268,7 +296,7 @@ button.share {
 
 .announcements {
     width: 350px;
-    padding: 1rem;
+    margin: 1rem;
 }
 
 .announcements div:nth-child(2) p {
@@ -277,7 +305,7 @@ button.share {
 
 .announcements>div {
     background-color: whitesmoke;
-    margin: 1rem 0;
+    margin: 1.5rem 0;
 }
 
 .trending {
